Mon Oct  4 19:26:55 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * COPYING:
        * TAO-INSTALL.html:
          Small updates

        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
          Fixed memory leak of the Port_Activator

        * tao/Valuetype/ValueBase.h:
          Docu update

Mon Oct  4 13:35:02 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * TAO_IDL/be/be_visitor_ccm_pre_proc.cpp:
          Remove one noevents ifdef.

Mon Oct  4 10:35:02 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/FtRtEvent/EventChannel/Request_Context_Repository.h:
        * tao/Remote_Invocation.h:
          Fixed typo

        * tao/ORB_Core.cpp:
          Use true instead of 1

Fri Oct  1 16:00:51 UTC 2010  William Otte  <wotte@zifnab>

        * COPYING:

          Updated to include DAnCE.

Fri Oct  1 12:58:51 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/util/utl_global.cpp:
          Typo fix

        * tao/PI/Interceptor_List_T.cpp:
          Layout changes

Fri Oct  1 09:54:07 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * orbsvcs/tests/Bug_2777_Regression/run_test.pl:
          Fixed append of .exe part to tao_nslist on Windows.

Thu Sep 30 14:48:58 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * orbsvcs/tests/Bug_2777_Regression/run_test.pl:

          The two test targets will communicate over shared memory (SHMIOP)
          so they can't be 32-bit and 64-bit executables on the same host.

Thu Sep 30 10:17:00 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/context_svs.cpp:
        * TAO_IDL/be/be_visitor_component/servant_svs.cpp:
          Layout changes to the generated code and simplified the subscribe
          methods, a few checks where done multiple times

Thu Sep 30 09:47:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/AnySeq.pidl: